update brush profile saved in BrushBuilder class